--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
             <section style="text-align: center">
               <strong> <%= current_user.email %></strong>
               | <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+              | Level: <%= current_user.level %>
             </section>
             <section style="padding-top: 10px;text-align: center">
               <a data-toggle="modal" data-target=".bs-example-modal-sm" href="#"><i class="fa fa-star fa-3x fa-fw"></i></a>
