Added threshold for next level for a User, and logic in play_controller. Still working on the condition.

--- a/app/views/play/display_questions.html.erb
+++ b/app/views/play/display_questions.html.erb
@@ -125,6 +125,10 @@
     function ChangePage()
     {
         var meter = <%= current_user.active_player.meter %>;
+        var number_of_trophies = <%= current_user.active_player.trophies.count %>;
+        if (number_of_trophies == 6) {
+            alert("Your win.");
+        }
         if ((meter == 2) && correctAnswer) {
             $('body').load('/play/display_trophy_select.html');
         }
