--- a/app/views/play/display_spinner.html.erb
+++ b/app/views/play/display_spinner.html.erb
@@ -48,14 +48,20 @@
     <% else %>
     <h1>Awaiting opponent's turn</h1>
 <% end %>
-
 <img src= "/images/centerspin.png" id="center">
 <img src= "/images/spinner.png" id="spinner">
 <p>Meter: <%= current_user.active_player.meter%></p>
-<p>Trophies: <%= current_user.active_player.trophies.count%></p>
 <% if (!current_user.active_player.opponent.nil?) %>
 <p>Opponent: <%= current_user.active_player.opponent.user.email%></p>
     <% end %>
+
+<div id="trophy">
+  <% current_user.active_player.trophies.each do |trophy|  %>
+      
+      <img src= <%= trophy.icon_path%>>
+
+  <% end %>
+</div>
 
 <script type ="text/javascript" charset="utf-8">
     jQuery(document).ready(function()
