Added rating system for questions, players can now rate the questions and submit a question.

--- a/app/views/play/display_questions.html.erb
+++ b/app/views/play/display_questions.html.erb
@@ -81,7 +81,11 @@
 <tbody>
 <% @question.answers.all.shuffle.each do |answer| %>
     <div class="text-center">
-      <button id="<%= answer.title.gsub(/\s+/, '') %>" type="button" name=<%= answer.title %> value=<%= answer.is_correct %> class="btn btn-primary btn-lg btn-block">
+      <button id="<%= answer.title.gsub(/\s+/, '') %>"
+              type="button"
+              name=<%= answer.title %>
+                      value=<%= answer.is_correct %>
+              class="btn btn-primary btn-lg btn-block">
         <%=answer.title %></button><br>
     </div>
     <script type ="text/javascript" charset="utf-8">
@@ -124,6 +128,7 @@
 <script>
     function ChangePage()
     {
+        $('body').load('/play/display_question_rating.html');
         var meter = <%= current_user.active_player.meter %>;
         var number_of_trophies = <%= current_user.active_player.trophies.count %>;
         if (number_of_trophies == 6) {
