--- a/app/views/game/category_selection.html.erb
+++ b/app/views/game/category_selection.html.erb
@@ -12,24 +12,24 @@
           "mp4": "audio/mp4",
           "ogg": "audio/ogg",
           "wav": "audio/wav"
-      }
+      };
 
       function createsoundbite(sound){
-          var html5audio=document.createElement('audio')
+          var html5audio=document.createElement('audio');
           if (html5audio.canPlayType){ //check support for HTML5 audio
               for (var i=0; i<arguments.length; i++){
-                  var sourceel=document.createElement('source')
-                  sourceel.setAttribute('src', arguments[i])
+                  var sourceel=document.createElement('source');
+                  sourceel.setAttribute('src', arguments[i]);
                   if (arguments[i].match(/\.(\w+)$/i))
-                      sourceel.setAttribute('type', html5_audiotypes[RegExp.$1])
+                      sourceel.setAttribute('type', html5_audiotypes[RegExp.$1]);
                   html5audio.appendChild(sourceel)
               }
-              html5audio.load()
+              html5audio.load();
               html5audio.playclip=function(){
-                  html5audio.pause()
-                  html5audio.currentTime=0
+                  html5audio.pause();
+                  html5audio.currentTime=0;
                   html5audio.play()
-              }
+              };
               return html5audio
           }
           else{
@@ -55,7 +55,7 @@ $("#center").rotate({
 bind:
 {
 click: function(){
-$("#spinner").rotate({ angle:0,animateTo:<%= @rotations %>,easing: $.easing.easeInOutExpo })
+$("#spinner").rotate({ angle:0,animateTo:<%= @rotations %>,easing: $.easing.easeInOutExpo });
     spinSound.playclip();
     $(function(){
         $('#questions').attr('disabled',false);
