--- a/app/views/game/start.html.erb
+++ b/app/views/game/start.html.erb
@@ -12,24 +12,24 @@
           "mp4": "audio/mp4",
           "ogg": "audio/ogg",
           "wav": "audio/wav"
-      }
+      };
 
       function createsoundbite(sound){
-          var html5audio=document.createElement('audio')
+          var html5audio=document.createElement('audio');
           if (html5audio.canPlayType){ //check support for HTML5 audio
               for (var i=0; i<arguments.length; i++){
-                  var sourceel=document.createElement('source')
-                  sourceel.setAttribute('src', arguments[i])
+                  var sourceel=document.createElement('source');
+                  sourceel.setAttribute('src', arguments[i]);
                   if (arguments[i].match(/\.(\w+)$/i))
-                      sourceel.setAttribute('type', html5_audiotypes[RegExp.$1])
+                      sourceel.setAttribute('type', html5_audiotypes[RegExp.$1]);
                   html5audio.appendChild(sourceel)
               }
-              html5audio.load()
+              html5audio.load();
               html5audio.playclip=function(){
-                  html5audio.pause()
-                  html5audio.currentTime=0
+                  html5audio.pause();
+                  html5audio.currentTime=0;
                   html5audio.play()
-              }
+              };
               return html5audio
           }
           else{
@@ -39,7 +39,7 @@
 
       //Initialize two sound clips with 1 fallback file each:
 
-      var correctSound=createsoundbite("/sounds/correct.mp3")
+      var correctSound=createsoundbite("/sounds/correct.mp3");
       var incorrectSound=createsoundbite("/sounds/incorrect.mp3")
 
   </script>
@@ -92,11 +92,11 @@
                             <%= @going_for_trophy = true %>
                         <% end %>
                     <% end %>
-                        window.location.href="/game/category_selection.html"
+                        window.location.href="/game/category_selection.html";
                 <% else %>
                 incorrectSound.playclip();
                     alert('Wrong! Next players turn!!!!');
-                    window.location.href="/game/category_selection.html"
+                    window.location.href="/game/category_selection.html";
                 <% end %>
             })
         });
