--- a/app/views/play/display_spinner.html.erb
+++ b/app/views/play/display_spinner.html.erb
@@ -55,6 +55,7 @@
 <p>Meter: <%= current_user.active_player.meter%></p>
 <p>#Correct: <%= current_user.total_correct%></p>
 <p>#Correct to Next Level: <%= @until_level_up%></p>
+<p>#Is in challenge: <%= !current_user.active_player.challenge.nil?%></p>
 <% if (!current_user.active_player.opponent.nil?) %>
 <p>Opponent: <%= current_user.active_player.opponent.user.email%></p>
     <% end %>
@@ -75,7 +76,7 @@
             {
                 click: function(){
                     <% if current_user.active_player.isActivePlayer %>
-                    $("#spinner").rotate({ angle:0,animateTo:<%= @rotations %>,easing: $.easing.easeInOutExpo }, setTimeout(ChangePage, 1000))
+                    $("#spinner").rotate({ angle:0,animateTo:<%= @rotations %>,easing: $.easing.easeInOutExpo }, setTimeout(ChangePage, 1000));
                     spinSound.playclip();
                     <% end %>
                 }
@@ -87,7 +88,7 @@
     {
         var meter = <%=current_user.active_player.meter%>;
         if ((meter == 3)) {
-            $('body').load('/play/display_trophy_select.html');
+            $('body').load('/play/display_full_meter_choice.html');
         }
         else {
             $('body').load('/play/display_questions.html');
