Moved some JavaScript around so I can disable sound!

--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -27,8 +27,10 @@
       </script>
   <% end %>
   <button onclick="ChangePage()" type="button" class="btn btn-primary btn-lg btn-block">
-    + NEW GAME</button>
-  <br/>  <br/>
+        + NEW GAME
+  </button>
+  <br/>
+  <br/>
 </div>
 
 <script>
