Trying to fix the db

--- a/app/views/play/display_questions.html.erb
+++ b/app/views/play/display_questions.html.erb
@@ -25,7 +25,7 @@
                   type: 'PUT'
               });
               document.getElementById('countdown').innerHTML = "Time up!";
-              alert('Times up! You got it wrong! Next players turn!!!!');
+              alert('Times up! You got it wrong! Next players turn!!!');
               ChangePage();
           } else {
               seconds--;
