Just having to reset to last night... I don't know what else to do at this point

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,17 +24,17 @@
               | Level: <%= current_user.level %>
             </section>
             <section style="padding-top: 10px;text-align: center">
-              <span data-remote="<%= edit_user_registration_path %>"
+              <a data-remote="<%= edit_user_registration_path %>"
                  data-toggle="modal"
                  data-target="#basicModal">
                 <i class="fa fa-star fa-3x fa-fw"></i>
-              </span>
+              </a>
 
-              <span data-remote="<%= edit_user_registration_path %>"
+              <a data-remote="<%= edit_user_registration_path %>"
                  data-toggle="modal"
                  data-target="#basicModal">
                     <i class="fa fa-cog fa-3x fa-fw"></i>
-              </span>
+              </a>
 
               <input type="checkbox" name="un-mute" id="un-mute">
               <label for="un-mute" class="unmute">
