--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -27,10 +27,8 @@
       </script>
   <% end %>
   <button onclick="ChangePage()" type="button" class="btn btn-primary btn-lg btn-block">
-        + NEW GAME
-  </button>
-  <br/>
-  <br/>
+    + NEW GAME</button>
+  <br/>  <br/>
 </div>
 
 <script>
