Finished a buggy version of challenge mode, with trophies and player interaction (untested)

--- a/app/views/play/display_full_meter_choice.erb
+++ b/app/views/play/display_full_meter_choice.erb
@@ -16,7 +16,7 @@
           url: "play/make_new_challenge",
           type: 'PUT'
       });
-      setTimeout($('body').load('/play/display_questions.html'), 200);
+      setTimeout($('body').load('/play/display_challenge_trophy_selection.html'), 200);
   }
 
 </script>
