--- a/app/views/play/display_trophy_select.erb
+++ b/app/views/play/display_trophy_select.erb
@@ -3,18 +3,17 @@
   <h1>Pick a trophy</h1>
 
   <% @categories.each do |category| %>
-    <% @contains = false %>
+    <% contains = false %>
     <% current_user.active_player.trophies.each do |trophy| %>
         <% if category == trophy.category %>
-          <% @contains = true %>
+          <% contains = true %>
           <%end%>
     <% end %>
-      <% if @contains %>
+      <% if contains %>
         <% next %>
   <%end%>
-      <div class="text-center">
-        <button id=<%= category.title.gsub(/\s+/, '') %> type="button" name=<%= category.title %> value= <%=category.id%> class="btn btn-primary btn-lg btn-block">
-          <%=category.title %></button><br>
+      <div id="trophy">
+        <input id=<%= category.title.gsub(/\s+/, '') %> type="image" value=<%=category.id%> src=<%= category.trophy.icon_path%> >
       </div>
       <script type ="text/javascript" charset="utf-8">
           $(document).ready(function() {
