--- a/app/views/play/display_question_rating.html.erb
+++ b/app/views/play/display_question_rating.html.erb
@@ -1,8 +1,17 @@
-<a id="fun" href="#">Fun</a>
-
-<a id="boring" href="#">Boring</a>
-
-<a id="submit_question" href="#">Submit Question</a>
+<div class="text-center">
+    <button id="fun" type="button" class="btn btn-primary btn-lg btn-block">
+      Fun!
+    </button>
+    <br>
+    <button id="boring" type="button" class="btn btn-primary btn-lg btn-block">
+      Boring!
+    </button>
+    <br>
+    <button id="submit_question" type="button" class="btn btn-primary btn-lg btn-block">
+      Submit a Question!
+    </button>
+    <br>
+</div>
 
 <script>
     $(function() {
