--- a/app/views/play/display_question_rating.html.erb
+++ b/app/views/play/display_question_rating.html.erb
@@ -36,7 +36,7 @@
             if (meter == 3) {
                 $('body').load('/play/display_full_meter_choice.html');
             }
-            else if (<%= current_user.active_player.isActivePlayer && !current_user.active_player.challenge.nil? %>){
+            else if (<%= current_user.active_player.isActivePlayer && !current_user.active_player.challenges.first.nil? %>){
                 $('body').load('/play/display_questions.html');
             }
             else {
